hphp/hack/test/typecheck/needs_concrete/needs_concrete_abstract_concrete_2.php.exp
WARN: File "needs_concrete_abstract_concrete_2.php", line 21, characters 13-14:
Dangerous call to `C2::nc` (a `<<__NeedsConcrete>>` method) via `static`. It requires `static` to refer to a concrete class but `static` may not be concrete. (Warn[12024])
  File "needs_concrete_abstract_concrete_2.php", line 7, characters 26-27:
  Declaration is here
ERROR: File "needs_concrete_abstract_concrete_2.php", line 19, characters 3-153:
Incomplete position information! We couldn't find the exact line of your type error in this definition. Please run `hh rage` and post in https://fb.workplace.com/groups/hackforhiphop/. (Typing[4002])
  File "needs_concrete_abstract_concrete_2.php", line 17, characters 22-23:
  `C2` is uninstantiable
  File "needs_concrete_abstract_concrete_2.php", line 17, characters 22-23:
  Declaration is here
